--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -20,6 +20,7 @@
                 <br>
                 <br>
                 <h3 class="color-h3" id="caps-tittle"></h3>
+                <div id="capsImg"></div>
                 <div id="capsDetail-container">
 
 
@@ -32,7 +33,9 @@
                     <div id="caps-lc" style="color: #fff;">
                         <h4 class="color-h3">Líneas de Colectivo disponibles</h4>
                     </div>
-                    <div id="googleMap" style="width:100%;height:300px;"></div>
+
+                    <div id="Distancia" style="width:100%;height:auto; color: #fff; font-weight: bold"></div>
+                    <div id="googleMapDetail" style="width:100%;height:300px;"></div>
 
                 </div>
 
